# tblite

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .meson-subproject-wrap-hash.txt  .pre-commit-config.yaml  .test-co2-gfn1.npz  CMakeLists.txt  README.md  \  adjlist_8f90.html  alpb_8f90.html  annotated.html  api_2calculator_8f90.html  api_2container_8f90.html  api_2context_8f90.html  api_2features_8f90.html  api_2param_8f90.html  api_2utils_8f90.html  api_2version_8f90.html  ascii_8f90.html  atomicrad_8f90.html  basis_2type_8f90.html  basis_8f90.html  blas_8f90.html  born_8f90.html  broyden_8f90.html  calculator_8h.html  calculator_8h_source.html  cds_8f90.html  ceh_2h0_8f90.html  ceh_2singlepoint_8f90.html  classes.html  classical_2halogen_8f90.html  common-scripts.yml  constants_8f90.html  container_2cache_8f90.html  container_2list_8f90.html  container_2type_8f90.html  container_8h.html  container_8h_source.html  (+683 more)
.github/regressions/: test_libgomp_collision.py
.github/workflows/: build.yml  codeql.yml  doc.yml  wheel.yml
app/: CMakeLists.txt  argument.f90  cli.f90  cli_help.f90  driver.f90  driver_fit.f90  driver_guess.f90  driver_param.f90  driver_run.f90  driver_tagdiff.f90  features.F90  main.f90  meson.build  tester.py
app/test/: 01-gfn2-alpb-energy.json  02-gfn1-gbsa-gradient.json  simple-xtb.toml
apptainer_recipe/: 20.4-cuda-11.8-gcc-9.def  20.4-cuda-11.8-intel-2023.2.0.def  20.4-gcc-9.def  20.4-intel-2023.2.0.def
assets/ci/: build-env.yaml  python-env.yaml
config/: CMakeLists.txt  dist_symlinks.sh  install-mod.py  meson.build  template-config.cmake  template-targets.cmake  template.cmake
config/cmake/: FindddX.cmake  Findddx.cmake  Finddftd4.cmake  Findgambits.cmake  Findmctc-lib.cmake  Findmstore.cmake  Findmulticharge.cmake  Finds-dftd3.cmake  Findtest-drive.cmake  Findtoml-f.cmake  tblite-utils.cmake
doc/: Doxyfile  conf.py  environment.yml  index.rst  installation.rst  requirements.txt
doc/_static/: references.bib
doc/api/: c.rst  fortran.rst  index.rst  python.rst
doc/spec/: coulomb.rst  dispersion.rst  hamiltonian.rst  index.rst  parameter.rst  solvation.rst
doc/tutorial/: fitting.rst  gpu.rst  index.rst  parallel.rst  singlepoint.rst
doc/users/: ase.rst  berny.rst  dftbplus.rst  index.rst  qcxms.rst
include/: tblite.h
include/tblite/: calculator.h  container.h  context.h  double_dictionary.h  error.h  features.h  macros.h  param.h  post_processing.h  result.h  solvation.h  structure.h  table.h  version.h
man/: tblite-fit.1.adoc  tblite-guess.1.adoc  tblite-param.1.adoc  tblite-run.1.adoc  tblite-solvents.7.adoc  tblite-tag.5.adoc  tblite.1.adoc
pyddx/: mindless.py  nacl.py  works.txt
python/: .gitignore  README.rst  build.py  ffi-builder.py  meson.build  meson_options.txt  mesonpep517.toml  pyproject.toml  setup.cfg  setup.py  xtbml.toml
python/subprojects/: tblite
python/tblite/: __init__.py  ase.py  berny.py  exceptions.py  interface.py  library.py  meson.build  qcschema.py  test_ase.py  test_berny.py  test_interface.py  test_library.py  test_qcschema.py  utils.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+92 more)
src/tblite/: CMakeLists.txt  adjlist.f90  basis.f90  blas.f90  container.f90  context.f90  coulomb.f90  cutoff.f90  data.f90  dictionary.f90  disp.f90  double_dictionary.f90  features.F90  lapack.f90  meson.build  ml_features.f90  ncoord.f90  os.F90  param.f90  repulsion.f90  results.f90  scf.f90  solvation.f90  spin.f90  timer.f90  toml.f90  version.f90  wavefunction.f90  wignerseitz.f90  xtb.f90
src/tblite/ceh/ncoord_ceh/: CMakeLists.txt  coordnumber.f90  covrad_ceh.f90  meson.build  ncoord_ceh.f90  ncoord_ceh_standard.f90  type_ceh.f90
subprojects/: .gitignore  CMakeLists.txt  ddx.wrap  dftd3.wrap  dftd4.wrap  gambits.wrap  json-fortran-8.2.5.wrap  mctc-lib.wrap  mstore.wrap  s-dftd3.wrap  tc-purification.wrap  tcgm-c-blas.wrap  tcgm_f_blas.wrap  test-drive.wrap  toml-f.wrap
test/: CMakeLists.txt  meson.build  test_restart_spin.py
test/api/: main.c  meson.build
test/cli/: 01a-gfn1xtb.json  01a-gfn1xtb.resp  01b-gfn2xtb.resp  01c-ipea1xtb.resp  01d-gfn1xtb-solv.resp  01e-gfn2xtb-solv.resp  02-gfn1-gbsa-gradient.json  02a-gfn1xtb.resp  02b-gfn2xtb.resp  02c-ipea1xtb.resp  02d-gfn1xtb-solv.resp  02e-gfn2xtb-solv.resp  03-sp-gfn2-cpcm-energy.json  03a-gfn1xtb.resp  03b-gfn2xtb.resp  03c-ipea1xtb.resp  03d-gfn1xtb-solv.json  03d-gfn1xtb-solv.resp  03e-gfn2xtb-solv.json  03e-gfn2xtb-solv.resp  (+35 more)
test/unit/: CMakeLists.txt  declared_symbols.txt  main.f90  meson.build  test_ceh.f90  test_cgto_ortho.f90  test_compressed_restart_calculator.f90  test_coulomb_charge.f90  test_coulomb_ewald.f90  test_coulomb_multipole.f90  test_coulomb_multipole_molecule.f90  test_coulomb_multipole_periodic.f90  test_coulomb_thirdorder.f90  test_density_matrix_purification.f90  test_dispersion.f90  test_double_dictionary.f90  test_fit.f90  test_gfn1_xtb.f90  test_gfn2_xtb.f90  test_halogen.f90  test_hamiltonian.f90  test_hdf5.f90  test_integral_multipole.f90  test_integral_overlap.f90  test_integral_trafo.f90  test_ipea1_xtb.f90  test_molden.f90  test_ncoord.f90  test_ncoord_gfn.f90  test_npy.f90  test_npz.f90  test_post_processing.f90  test_repulsion.f90  test_slater_expansion.f90  test_solvation_born.f90  test_solvation_cds.f90  test_solvation_cpcm.f90  test_solvation_ddx.f90  test_solvation_shift.f90  test_solvation_surface.f90  (+7 more)
test/validation_xtbml/: meson.build  test.py  tester.py
test/validation_xtbml/ch3_uhf_1/: coord.xyz  ml_feature.csv
test/validation_xtbml/ethene_xyz/: coord.xyz  ml_feature.csv
test/validation_xtbml/oh-/: coord.xyz  ml_feature.csv
test_xtbml/: coord.xyz  ml.toml
(+438 files in other folders)
