[metadata]
name = tblite
version = 0.3.0
description = Light-weight tight-binding framework
long_description = file: README.rst
license = LGPL-3.0-or-later
classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Chemistry
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
install_requires =
  cffi
  numpy
tests_require =
    pytest
    pytest-cov
    ase
python_requires = >=3.6

[options.extras_require]
ase = ase
